--- a/rmd/basic.Rmd
+++ b/rmd/basic.Rmd
@@ -31,7 +31,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 * Rを利用：[Rをダウンロード](https://cran.ism.ac.jp/)
    * コンソールに直接コピーアンドペーストして「Enter」（Macの場合は「Return」）
-   * 「ファイル」→「新しいスクリプト」にコピーアンドペーストして，実行する箇所を選択 → 「Ctrl」＋「R」
+   * 新しいスクリプトにコピーアンドペーストする場合
+      * Windows: 「ファイル」→「新しいスクリプト」にペーストして，実行する箇所を選択 → 「Ctrl」＋「R」
+      * Mac: 白い紙のアイコンをクリックして開いたスクリプトにペーストし，実行する箇所を選択 → 「Command」＋「Return」
    * 「ファイル」→「新しいスクリプト」に「写経」（コピーアンドペーストしないで一字一句書き写すこと）して実行．一番面倒だが，一番勉強になる
 * RStudioを利用：Rをダウンロードしてから [RStudioをダウンロード](https://posit.co/download/rstudio-desktop/)
    * コンソールに直接コピーアンドペーストして「Enter」
