--- a/rmd/descriptive_stat.Rmd
+++ b/rmd/descriptive_stat.Rmd
@@ -494,11 +494,11 @@ plot(x, y)  # scatter plot
 (x - mean(x)) * (y - mean(y))
 ```
 
-平均からの偏差の積は何を意味しているのか？
+平均からの偏差の積は何を意味しているかを考えよう．
 
 下の図で平均値を表す赤線をx軸・y軸とみなそう．
-このとき，第1象限・第3象限は正，第2象限（・第4象限）は負の値を取る．
-よって，片方の変数がその平均値よりも大きな値を取るとき，もう片方の変数もその平均値よりも大きな値を取る傾向にある時，第1象限と第3象限に多くのデータが集まり，結果として偏差の積は正の値をとるだろう．
+このとき，偏差の積は，第1象限・第3象限では正，第2象限（・第4象限）では負の値を取る．
+よって，片方の変数がその平均値より大きな値を取るとき，もう片方の変数もその平均値より大きな値を取る傾向にあるならば，第1象限と第3象限に多くのデータが集まり，結果として偏差の積は正の値をとるだろう．
 その逆に右下がりの傾向がある時，偏差の積は負の値を取るだろう．
 
 ```{r cov1_plot}
@@ -507,7 +507,7 @@ text(x, y, labels = 1:3, cex = 2)
 abline(v = mean(x), h = mean(y), col = "red")
 ```
 
-以上のように計算される「偏差の積」の平均値が共分散である．
+以上のように計算される「偏差の積」の平均値（のようなもの）が共分散である．
 
 ```{r cov2}
 # sum((x - mean(x)) * (y - mean(y))) / 3  # definition of population covariance
@@ -542,7 +542,7 @@ abline(lm(y2b ~ x2), col = "red")
 lm(y2a ~ x2)$coef; lm(y2b ~ x2)$coef # 直線の傾きはほとんど同じ（左 0.862, 右 0.856）
 -->
 
-相関係数の大きさは，直線の傾きの大きさを表すわけではない．
+相関係数の大きさは，直線の傾きの大きさ（どれだけsteepであるか）を表すわけではない．
 
 ```{r cor3}
 set.seed(0)
@@ -572,6 +572,18 @@ cor(x, x4b)
 par(mfrow = c(1, 2))
 plot(x, x4a, cex = 2); abline(lm(x4a ~ x), col = "red")
 plot(x, x4b, cex = 2); abline(lm(x4b ~ x), col = "red")
+```
+
+一見して異なるものを表す変数間で相関係数が -1 になる場合がある．
+これは回帰分析における多重共線性の議論と関わるので留意しよう．
+
+たとえば，「女性の場合に1をとる変数（ダミー変数）」と「男性の場合に1をとる変数」をそれぞれ作成したとき，もしデータセットに含まれる全ての個体が女性/男性のいずれかに割り当てられているなら，この2つの変数の相関係数は定義上 -1 になる．
+
+```{r cor_pm1_2}
+titanic$female <- 1 * (titanic$sex == "female")
+titanic$male <- 1 * (titanic$sex == "male")
+head(titanic[, c("sex", "female", "male")])
+cor(titanic$female, titanic$male)
 ```
 
 ### Anscombe's quartet / アンスコムの数値例
@@ -660,6 +672,8 @@ cor(x123, y123)
 plot(x123, y123, col = rep(c("darkgreen", "blue", "darkorange"), each = 10), pch = 20)
 abline(lm(y123 ~ x123), col = "red")
 ```
+
+補足：このパラドックスは回帰分析においては交絡の問題として捉えることができる．
 
 
 # Take home messages 
