--- a/rmd/descriptive_stat.Rmd
+++ b/rmd/descriptive_stat.Rmd
@@ -288,6 +288,24 @@ sqrt(var(x))  # definition of standard deviation
 sd(x)
 ```
 
+```{r mean_dev_visual, echo=FALSE}
+# 数直線
+plot(NA, xlim = c(0, 7), ylim = c(0.8, 1.02), yaxt = "n", xlab = "", ylab = "", bty = "n")
+# 数直線
+abline(h = 1, col = "gray")
+# 値
+points(x, rep(1, 3), pch = 19, col = "blue", cex = 2)
+text(x, rep(1.02, 3), labels = x, col = "blue", cex = 1.5)
+# 平均
+points(mean(x), 1, pch = 4, col = "red", cex = 3)
+text(mean(x), 1.02, labels = expression(bar(x) == 3), col = "red", cex = 1.5)
+# 偏差
+lines(c(1, 3), rep(0.98, 2), col = "blue", lty = 2, lwd = 2)
+lines(c(2, 3), rep(0.93, 2), col = "blue", lty = 2, lwd = 2)
+lines(c(6, 3), rep(0.88, 2), col = "blue", lty = 2, lwd = 2)
+text(c(2, 2.5, 4.5), c(.97, .92, .87), labels = paste0("dev = ", c(-2, -1, 3)), col = "darkblue")
+text(c(2, 2.5, 4.5), c(.955, .905, .855), labels = paste0("dev^2 = ", c(4, 1, 9)), col = "darkblue")
+```
 
 ### Example of age variable of Titanic data / タイタニック号乗客データの年齢変数
 
@@ -347,6 +365,17 @@ summary(sapply(X = 1:1000, FUN = function (x) {
   sum((rnorm_i - mean(rnorm_i))^2) / length(rnorm_i)  # population variance 
 }))
 ```
+
+<div style="border: 2px solid #888; padding: 10px;">
+本来の導出は以下の通り．
+
+$X_1, X_2, \ldots, X_n$ を平均 $\mu$ 分散 $\sigma^2$ の同一分布に独立に従う確率変数とみなす．
+このとき，標本分散が母分散 $\sigma^2$ の不偏推定量（不偏性 $E[\hat{\theta}] = \theta$ を満たすような推定量 $\hat{\theta}$）となることは以下のように示される．
+
+$$ E \left[ \sum_i (X_i - \bar{X})^2 \right] = E \left[ \sum_i (X_i - \mu)^2 \right] - n E \left[(\bar{X} - \mu)^2 \right] = n \sigma^2 - n \cdot \frac{\sigma^2}{n} = (n-1) \sigma^2 $$
+$$ \mbox{where} \quad E \left[(\bar{X} - \mu)^2 \right] = V(\bar{X}) = V \left( \frac{1}{n} \sum_i X_i \right) = \frac{1}{n^2} \sum_i V(X_i) = \frac{1}{n^2} \cdot n \sigma^2 = \frac{\sigma^2}{n} $$
+$$ \therefore E \left[ \frac{1}{n-1} \sum_i (X_i - \bar{X}) \right] = \sigma^2 $$
+</div>
 
 ### Box plot / 箱ひげ図
 
@@ -656,7 +685,7 @@ c(mean(titanic$fare[titanic$pclass == 1], na.rm = TRUE),
   mean(titanic$fare[titanic$pclass == 3], na.rm = TRUE))
 ```
 
-直感的に説明すれば，客室等級ごとに計算した相関は客室等級「内」の相関を捉えるのに対して，サンプル全体の相関は客室等級「間」の相関を捉えるためである．
+直感的に説明すれば，客室等級ごとに計算した相関は客室等級「内」の相関を捉えるのに対して，サンプル全体の相関は客室等級「間」の相関も捉えるためである．
 
 このように集団を分割したときに集団全体とは異なる傾向が観察される現象は「シンプソンのパラドックス」として知られる．
 下の図を参照．
