--- a/rmd/descriptive_stat.Rmd
+++ b/rmd/descriptive_stat.Rmd
@@ -369,7 +369,7 @@ summary(sapply(X = 1:1000, FUN = function (x) {
 <div style="border: 2px solid #888; padding: 10px;">
 本来の導出は以下の通り．
 
-$X_1, X_2, \ldots, X_n$ を平均 $\mu$ 分散 $\sigma^2$ の同一分布に独立に従う確率変数とみなす．
+$X_1, X_2, \ldots, X_n$ を平均 $\mu$ 分散 $\sigma^2$ の同一分布に独立に従う確率変数とする．
 このとき，標本分散が母分散 $\sigma^2$ の不偏推定量（不偏性 $E[\hat{\theta}] = \theta$ を満たすような推定量 $\hat{\theta}$）となることは以下のように示される．
 
 $$ E \left[ \sum_i (X_i - \bar{X})^2 \right] = E \left[ \sum_i (X_i - \mu)^2 \right] - n E \left[(\bar{X} - \mu)^2 \right] = n \sigma^2 - n \cdot \frac{\sigma^2}{n} = (n-1) \sigma^2 $$
@@ -536,8 +536,8 @@ plot(x, y)  # scatter plot
 その逆に右下がりの傾向がある時，偏差の積は負の値を取るだろう．
 
 ```{r cov1_plot}
-plot(x, y)
-text(x, y, labels = 1:3, cex = 2)
+plot(x, y, xlim = c(0, 7), cex = 2, ylim = c(0, 5))
+text(x, y+0.5, labels = round((x - mean(x)) * (y - mean(y)), 2), cex = 1.5)
 abline(v = mean(x), h = mean(y), col = "red")
 ```
 
