--- a/rmd/descriptive_stat.Rmd
+++ b/rmd/descriptive_stat.Rmd
@@ -15,6 +15,8 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+このページに対応するRmdファイル：[GitHub](https://github.com/kurodaecon/dasp/blob/main/rmd/descriptive_stat.Rmd)
+
 # Loading data / データの読み込み
 
 タイタニック号乗客データを読み込む．
@@ -278,14 +280,8 @@ $$ s^2 = \frac{1}{n-1} \sum_i (x_i - \bar{x})^2, \quad s = \sqrt{s^2} $$
 ```{r var}
 x <- c(1, 2, 6)
 x - 3
-x - mean(x)
+x - mean(x)  # deviation from the mean 
 (x - mean(x))^2
-mean((x - mean(x))^2)  # definition of population variance
-sum((x - mean(x))^2) / 3  # same as above
-sum((x - mean(x))^2) / (3-1)  # definition of sample variance 
-var(x)  # variance defined as sample variance
-sqrt(var(x))  # definition of standard deviation
-sd(x)
 ```
 
 ```{r mean_dev_visual, echo=FALSE}
@@ -300,11 +296,20 @@ text(x, rep(1.02, 3), labels = x, col = "blue", cex = 1.5)
 points(mean(x), 1, pch = 4, col = "red", cex = 3)
 text(mean(x), 1.02, labels = expression(bar(x) == 3), col = "red", cex = 1.5)
 # 偏差
-lines(c(1, 3), rep(0.98, 2), col = "blue", lty = 2, lwd = 2)
-lines(c(2, 3), rep(0.93, 2), col = "blue", lty = 2, lwd = 2)
-lines(c(6, 3), rep(0.88, 2), col = "blue", lty = 2, lwd = 2)
-text(c(2, 2.5, 4.5), c(.97, .92, .87), labels = paste0("dev = ", c(-2, -1, 3)), col = "darkblue")
-text(c(2, 2.5, 4.5), c(.955, .905, .855), labels = paste0("dev^2 = ", c(4, 1, 9)), col = "darkblue")
+lines(c(1, 3), rep(0.98, 2), lty = 2, lwd = 2)
+lines(c(2, 3), rep(0.93, 2), lty = 2, lwd = 2)
+lines(c(6, 3), rep(0.88, 2), lty = 2, lwd = 2)
+text(c(2, 2.5, 4.5), c(.97, .92, .87), labels = paste0("dev = ", c(-2, -1, 3)))
+text(c(2, 2.5, 4.5), c(.955, .905, .855), labels = paste0("dev^2 = ", c(4, 1, 9)))
+```
+
+```{r var2}
+mean((x - mean(x))^2)  # definition of population variance
+sum((x - mean(x))^2) / 3  # same as above
+sum((x - mean(x))^2) / (3-1)  # definition of sample variance 
+var(x)  # defined as sample variance
+sqrt(var(x))  # standard deviation
+sd(x)
 ```
 
 ### Example of age variable of Titanic data / タイタニック号乗客データの年齢変数
@@ -388,6 +393,17 @@ $$ \therefore E \left[ \frac{1}{n-1} \sum_i (X_i - \bar{X})^2 \right] = \sigma^2
 
 ```{r box_age}
 boxplot(titanic$age) 
+text(1.35, quantile(titanic$age, .75, na.rm = TRUE) + 1.5 * IQR(titanic$age, na.rm = T), labels = "“max” (= Q3+1.5*IQR)")
+text(1.35, quantile(titanic$age, .75, na.rm = TRUE), labels = "75% (Q3)")
+text(1.35, quantile(titanic$age, .5, na.rm = TRUE), labels = "50% (median)")
+text(1.35, quantile(titanic$age, .25, na.rm = TRUE), labels = "25% (Q1)")
+text(1.35, min(titanic$age, na.rm = TRUE), labels = "(actual) min")
+```
+
+注：箱の下の髭は実際の最小値まで伸ばす．実際の最小値 (age = 0.17) が下の計算式で与えられる “min” より大きいため．
+
+```{r box_min}
+quantile(titanic$age, .25, na.rm = T) - 1.5 * IQR(titanic$age, na.rm = T)
 ```
 
 男女別に箱ひげ図を描く場合は，`boxplot(女性の年齢ベクトル, 男性の年齢ベクトル)` のように指定する．
@@ -524,7 +540,7 @@ $$ Cov(x, y) = \frac{1}{n-1} \sum_i (x_i - \bar{x})(y_i - \bar{y}) $$
 ```{r cov0}
 x <- c(1, 2, 6)
 y <- c(1, 3, 4)
-plot(x, y)  # scatter plot
+plot(x, y, cex = 2, xlim = c(0, 7), ylim = c(0, 5))  # scatter plot
 (x - mean(x)) * (y - mean(y))
 ```
 
@@ -536,9 +552,11 @@ plot(x, y)  # scatter plot
 その逆に右下がりの傾向がある時，偏差の積は負の値を取るだろう．
 
 ```{r cov1_plot}
-plot(x, y, xlim = c(0, 7), cex = 2, ylim = c(0, 5))
+plot(x, y, cex = 2, xlim = c(0, 7), ylim = c(0, 5))
 text(x, y+0.5, labels = round((x - mean(x)) * (y - mean(y)), 2), cex = 1.5)
 abline(v = mean(x), h = mean(y), col = "red")
+text(3.5, 0.5, expression(bar(x) == 3), col = "red", cex = 1.5)
+text(0.5, 2.4, expression(bar(y) == 2.7), col = "red", cex = 1.5)
 ```
 
 下図からも分かるように，$(x,y)$ が $\bar{x}, \bar{y}$ の両方から離れるほど偏差の積の絶対値が大きくなる．
@@ -550,6 +568,7 @@ zz <- outer(xx, yy, function(x, y) (x - 3) * (y - 2.67))
 contour(xx, yy, zz, xlab = "x", ylab = "y", 
         main = expression("Contour of " (x-bar(x))(y-bar(y))))
 abline(v = mean(x), h = mean(y), col = "red")
+text(x = c(3.5, 2.5, 2.5, 3.5), y = c(3.5, 3.5, 1.5, 1.5), labels = c("+", "-", "+", "-"), cex = 4)
 ```
 
 以上のように計算される「偏差の積」の平均値（のようなもの）が共分散である．
@@ -569,7 +588,7 @@ cov(x, y) / (sd(x) * sd(y))  # definition of correlation coef.
 cor(x, y)  # correlation coefficient
 ```
 
-相関係数の大きさは，データがデータに最もよく当てはまる直線にどれだけ近いかによって決まる．
+相関係数の大きさは，データに最もよく当てはまる直線（下図では赤色の実線）に各データがどれだけ近いかによって決まる．
 
 ```{r cor2}
 set.seed(0)
@@ -709,12 +728,13 @@ c(mean(titanic$fare[titanic$pclass == 1], na.rm = TRUE),
 ```{r cor_simpson_ex}
 set.seed(0)
 x1 <- rnorm(10, mean = 5);  y1 <- - x1 + rnorm(10)
-x2 <- rnorm(10, mean = 10); y2 <- - x2 + rnorm(10) + 5
-x3 <- rnorm(10, mean = 15); y3 <- - x3 + rnorm(10) + 15
-cor(x1, y1); cor(x2, y2); cor(x3, y3)
+x2 <- rnorm(10, mean = 10); y2 <- - x2 + rnorm(10) + 10
+x3 <- rnorm(10, mean = 15); y3 <- - x3 + rnorm(10) + 20
+c(cor(x1, y1), cor(x2, y2), cor(x3, y3))  # by group 
 x123 <- c(x1, x2, x3); y123 <- c(y1, y2, y3)
-cor(x123, y123)
-plot(x123, y123, col = rep(c("darkgreen", "blue", "darkorange"), each = 10), pch = 20)
+cor(x123, y123)  # whole sample 
+plot(x123, y123, col = rep(c("darkgreen", "blue", "darkorange"), each = 10), 
+     pch = rep(c(15, 17, 19), each = 10))
 abline(lm(y123 ~ x123), col = "red")
 ```
 
