--- a/rmd/organizing_data.Rmd
+++ b/rmd/organizing_data.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Data Analysis Using Statistical Packages: Organizing and Visualizing Data"
 author: "Sho Kuroda / 黒田翔"
-date: '2024年3月 (Last update: 2024年4月)'
+date: '最終更新：2025年5月'
 output:
   html_document:
     toc: yes
@@ -15,6 +15,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+このページに対応するRmdファイル：[GitHub](https://github.com/kurodaecon/dasp/blob/main/rmd/organizing_data.Rmd)
 
 # Packages in R 
 
